test/modules/diten/returnClassDiffModule6.good
returnClassDiffModule6.chpl:12: In function 'main':
returnClassDiffModule6.chpl:14: error: unresolved call 'C.b'
$CHPL_HOME/modules/standard/ChapelBase.chpl:914: note: candidates are: _EndCount.b
